--- a/libraryapp/package.json
+++ b/libraryapp/package.json
@@ -18,7 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^9.3.0",
